[package]
name = "hint"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
once_cell = "1.20.2"
chrome = "0.1.0"
chrono = "0.4.39"
log = "0.4.22"
